[tool.poetry]
name = "redis-wheel"
version = "6.2.5"
description = ""
license = "MIT"
authors = ["Benjamin Levin <bplevin36@gmail.com>"]
readme = "README.md"
repository = "https://github.com/bplevin36/redis-wheel"
keywords = ["redis", "server"]
include = ["redis_wheel/bin/*"]

[tool.poetry.dependencies]
python = "^3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
