[tool.poetry]
name = "redis-wheel"
version = "0.1.0"
description = "Wheels that bundle precompiled redis-server and redis-cli binaries for the appropriate platform"
license = "MIT"
authors = ["Benjamin Levin <bplevin36@gmail.com>"]
readme = "README.md"
requires-python = ">=3.9"
repository = "https://github.com/bplevin36/redis-wheel"
keywords = ["redis", "server"]
include = ["redis_wheel/bin/*"]

[tool.poetry.dependencies]
python = "^3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry==1.6.1"]
